# FretNinja

./: .claudeignore  .gitignore  CLAUDE.md  app.json  nodeModules fix.txt  package-lock.json  package.json  progress.md  run-android.sh  run-ios.sh  run-tasks.sh
.archive/: progress-2026-03-28.md
NewPitchDetection/: CLAUDE.MD  Plan.md
NewPitchDetection/Tasks/: 001.md  002.md  003.md  004.md  005.md  006.md  007.md
app/: _layout.tsx  pitch-test.tsx  quiz.tsx  results.tsx
app/(tabs)/: _layout.tsx  index.tsx  settings.tsx  stats.tsx
components/: FeedbackOverlay.tsx  FretboardDiagram.tsx  MasteryGrid.tsx  NotePrompt.tsx  PitchIndicator.tsx  RoundLengthPicker.tsx  ScoreCounter.tsx  SwipeableTab.tsx  TimerBar.tsx
constants/: fretboard.ts  theme.ts
docs/: pitch-detection-explained.md
hooks/: useMasteryData.ts  usePitchDetection.ts  useQuizEngine.ts  useShakeDetector.ts
modules/pitch-detector/android/src/main/cpp/: CMakeLists.txt  OboeAudioCapture.cpp  OboeAudioCapture.h  pitch-detector-jni.cpp  stub.cpp
patches/: react-native-pitch-detector+0.1.6.patch
plugins/: withMicrophonePermission.js
project-planning/: Plan.md  nextFeatures.md  research.md  todo.md
scripts/: verify-android-build.sh
stores/: masteryStore.ts  roundStore.ts  settingsStore.ts
tasks/: 001.md  002.md  003.md  004.md  005.md  006.md  007.md  008.md  009.md  010.md  011.md  012.md  013.md  014.md  015.md  016.md  017.md  018.md  019.md  020.md  021.md  migration-map.md
types/: index.ts
utils/: detectionMapping.ts  notes.ts  scoring.ts  sounds.ts  weightedRandom.ts
(+32 files in other folders)
